--- a/testblog/mainpage/templates/mainpage/content.html
+++ b/testblog/mainpage/templates/mainpage/content.html
@@ -9,16 +9,16 @@
     <div id="carousel-1" class="carousel slide" data-bs-ride="false">
         <div class="carousel-inner">
             <div class="carousel-item active"><img class="w-100 d-block"
-                                                   src="https://cdn.bootstrapstudio.io/placeholders/1400x800.png"
+                                                   src="{% static 'mainpage/img/pydjango.jpg' %}"
                                                    alt="Slide Image"/></div>
             <div class="carousel-item"><img class="w-100 d-block"
-                                            src="https://cdn.bootstrapstudio.io/placeholders/1400x800.png"
+                                            src="{% static 'mainpage/img/pykivy.jpg' %}"
                                             alt="Slide Image"/></div>
             <div class="carousel-item"><img class="w-100 d-block"
-                                            src="https://cdn.bootstrapstudio.io/placeholders/1400x800.png"
+                                            src="{% static 'mainpage/img/pybots.jpg' %}"
                                             alt="Slide Image"/></div>
             <div class="carousel-item"><img class="w-100 d-block"
-                                            src="https://cdn.bootstrapstudio.io/placeholders/1400x800.png"
+                                            src="{% static 'mainpage/img/nocode.jpg' %}"
                                             alt="Slide Image"/></div>
         </div>
         <div><a class="carousel-control-prev" href="#carousel-1" role="button" data-bs-slide="prev"><span
