--- a/testblog/mainpage/templates/mainpage/index.html
+++ b/testblog/mainpage/templates/mainpage/index.html
@@ -9,72 +9,70 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="{% static 'mainpage/css/index.css' %}" type="text/css">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="{% static 'mainpage/css/index.css' %}">
 </head>
 <body>
-<header>
 <body style="font-family: 'Roboto Serif', serif;background: var(--bs-body-color);font-size: 16px;">
     <nav class="navbar navbar-expand-md bg-body py-3" style="background: rgba(255,255,255,0);padding: 0px 0px;" data-bs-theme="dark">
-        <div class="container"><a class="navbar-brand d-flex align-items-center" href="#"></a><a class="border-0" href="index.html" style="color: rgb(255,255,255);position: relative;display: flex;overflow: visible;text-decoration: none;">Блог Python-разработчика</a><button class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+        <div class="container"><a class="navbar-brand d-flex align-items-center" href="#"></a><a class="border-0" href="{% url 'content' %}" style="color: rgb(255,255,255);position: relative;display: flex;overflow: visible;text-decoration: none;">Блог Python-разработчика</a><button class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <div id="navcol-1" class="collapse navbar-collapse">
                 <ul class="navbar-nav me-auto">
-                    <li class="nav-item"></li>
-                    <li class="nav-item"></li>
-                    <li class="nav-item"></li>
-                    <li class="nav-item"></li>
-                    <li class="nav-item"></li>
-                    <li class="nav-item"></li>
                     <li class="nav-item dropdown"><a class="dropdown-toggle nav-link" aria-expanded="false" data-bs-toggle="dropdown" href="#" style="margin: 5px;color: rgb(255,255,255);">Проекты</a>
-                        <div class="dropdown-menu"><a class="dropdown-item" href="#" style="font-size: 12px;">Python Django</a><a class="dropdown-item" href="#" style="font-size: 12px;">Python Aiogram</a><a class="dropdown-item" href="#" style="font-size: 12px;">Python Kivy/KivyMD</a>
-                            <div class="dropdown-divider" style="font-size: 12px;"></div><a class="dropdown-item" href="#" style="font-size: 12px;">NoCode проекты</a>
+                        <div class="dropdown-menu"><a class="dropdown-item" href="{% url 'pydjango' %}" style="font-size: 12px;">Python Django</a><a class="dropdown-item" href="{% url 'pybots' %}" style="font-size: 12px;">Python Aiogram</a><a class="dropdown-item" href="{% url 'pykivy' %}" style="font-size: 12px;">Python Kivy/KivyMD</a>
+                            <div class="dropdown-divider" style="font-size: 12px;"></div><a class="dropdown-item" href="{% url 'nocode' %}" style="font-size: 12px;">NoCode проекты</a>
                         </div>
                     </li>
-                    <li class="nav-item"><a class="nav-link" href="#" style="margin: 5px;color: rgb(255,255,255);">Обо мне</a></li>
+                    <li class="nav-item"><a class="nav-link" href="{% url 'bio' %}" style="margin: 5px;color: rgb(255,255,255);">Обо мне</a></li>
                 </ul><button class="btn btn-primary" type="button" style="transform-style: preserve-3d;">Форма обратной связи</button>
             </div>
         </div>
     </nav>
-</header>
 <section>
     {% block content %}
     {% endblock %}
 </section>
 <footer style="background: var(--bs-body-color);font-size: 12px;">
-        <footer class="text-white bg-dark" style="font-size: 14px;border-style: none;">
-            <div class="container py-4 py-lg-5">
-                <div class="row justify-content-center">
-                    <div class="col-sm-4 col-md-3 text-center text-lg-start d-flex flex-column item">
-                        <h3 class="fs-6 text-white" style="/*color: #ffffff;*/text-decoration: underline;">Проекты</h3>
-                        <ul class="list-unstyled" style="color: #ffffff;">
-                            <li style="color: #ffffff;"><a class="link-light" href="#" style="color: #ffffff;">Python Django</a></li>
-                            <li style="color: #ffffff;"><a class="link-light" href="#" style="color: #ffffff;">Python Aiogram</a></li>
-                            <li style="color: #ffffff;"><a class="link-light" href="#" style="color: #ffffff;">Python Kivy/KivyMD</a></li>
-                            <li style="color: #ffffff;">NoCode проекты</li>
-                        </ul>
-                    </div>
-                    <div class="col-sm-4 col-md-3 text-center text-lg-start d-flex flex-column item" style="color: #ffffff;">
-                        <h3 class="fs-6 text-white" style="/*color: #ffffff;*/text-decoration: underline;">Контакты</h3>
-                        <ul class="list-unstyled" style="color: #ffffff;">
-                            <li style="color: #ffffff;"><a class="link-light" href="#" style="color: #ffffff;">Телефон: +7 (919) 406-53-72</a></li>
-                            <li style="color: #ffffff;"><a class="link-light" href="#" style="color: #ffffff;">Email: Tima.skye@yandex.ru</a></li>
-                            <li style="color: #ffffff;"><a class="link-light" href="#" style="color: #ffffff;">Telegram: <span style="color: rgb(188, 190, 196); background-color: rgb(30, 31, 34);">@tima_skye</span></a></li>
-                        </ul>
-                    </div>
+    <footer class="text-white bg-dark" style="font-size: 14px;border-style: none;">
+        <div class="container py-4 py-lg-5">
+            <div class="row justify-content-center">
+                <div class="col-sm-4 col-md-3 text-center text-lg-start d-flex flex-column item">
+                    <h3 class="fs-6 text-white" style="/*color: #ffffff;*/text-decoration: underline;">Проекты</h3>
+                    <ul class="list-unstyled" style="color: #ffffff;">
+                        <li style="color: #ffffff;"><a class="link-light" href="{% url 'pydjango' %}" style="color: #ffffff;">Python Django</a></li>
+                        <li style="color: #ffffff;"><a class="link-light" href="{% url 'pybots' %}" style="color: #ffffff;">Python Aiogram</a></li>
+                        <li style="color: #ffffff;"><a class="link-light" href="{% url 'pykivy' %}" style="color: #ffffff;">Python Kivy/KivyMD</a></li>
+                        <li style="color: #ffffff;"><a class="link-light" href="{% url 'nocode' %}" style="color: #ffffff;">NoCode проекты</a></li>
+                    </ul>
                 </div>
-                <hr />
-                <div class="d-flex justify-content-between align-items-center pt-3" style="font-size: 20px;">
-                    <ul class="list-inline m-auto mb-0">
-                        <li class="list-inline-item"><svg class="bi bi-facebook" xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16">
-                                <path d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951"></path>
-                            </svg></li>
-                        <li class="list-inline-item"><svg class="bi bi-twitter" xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16">
-                                <path d="M5.026 15c6.038 0 9.341-5.003 9.341-9.334 0-.14 0-.282-.006-.422A6.685 6.685 0 0 0 16 3.542a6.658 6.658 0 0 1-1.889.518 3.301 3.301 0 0 0 1.447-1.817 6.533 6.533 0 0 1-2.087.793A3.286 3.286 0 0 0 7.875 6.03a9.325 9.325 0 0 1-6.767-3.429 3.289 3.289 0 0 0 1.018 4.382A3.323 3.323 0 0 1 .64 6.575v.045a3.288 3.288 0 0 0 2.632 3.218 3.203 3.203 0 0 1-.865.115 3.23 3.23 0 0 1-.614-.057 3.283 3.283 0 0 0 3.067 2.277A6.588 6.588 0 0 1 .78 13.58a6.32 6.32 0 0 1-.78-.045A9.344 9.344 0 0 0 5.026 15"></path>
-                            </svg></li>
-                        <li class="list-inline-item"></li>
+                <div class="col-sm-4 col-md-3 text-center text-lg-start d-flex flex-column item" style="color: #ffffff;">
+                    <h3 class="fs-6 text-white" style="/*color: #ffffff;*/text-decoration: underline;">Контакты</h3>
+                    <ul class="list-unstyled" style="color: #ffffff;">
+                        <li style="color: #ffffff;"><a class="link-light" href="#" style="color: #ffffff;">Телефон: +7 (919) 406-53-72</a></li>
+                        <li style="color: #ffffff;"><a class="link-light" href="#" style="color: #ffffff;">Email: Tima.skye@yandex.ru</a></li>
+                        <li style="color: #ffffff;"><a class="link-light" href="#" style="color: #ffffff;">Telegram: <span style="color: rgb(188, 190, 196); background-color: rgb(30, 31, 34);">@tima_skye</span></a></li>
                     </ul>
                 </div>
             </div>
-        </footer>
+            <hr />
+            <div class="d-flex justify-content-between align-items-center pt-3" style="font-size: 20px;">
+                <ul class="list-inline m-auto mb-0">
+                    <li class="list-inline-item"><svg class="bi bi-github" xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" style="font-size: 25px;">
+                            <path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8"></path>
+                        </svg> GitHub</li>
+                    <li class="list-inline-item"><svg class="bi bi-bootstrap-fill" xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" style="font-size: 25px;">
+                            <path d="M6.375 7.125V4.658h1.78c.973 0 1.542.457 1.542 1.237 0 .802-.604 1.23-1.764 1.23zm0 3.762h1.898c1.184 0 1.81-.48 1.81-1.377 0-.885-.65-1.348-1.886-1.348H6.375v2.725z"></path>
+                            <path d="M4.002 0a4 4 0 0 0-4 4v8a4 4 0 0 0 4 4h8a4 4 0 0 0 4-4V4a4 4 0 0 0-4-4h-8zm1.06 12V3.545h3.399c1.587 0 2.543.809 2.543 2.11 0 .884-.65 1.675-1.483 1.816v.1c1.143.117 1.904.931 1.904 2.033 0 1.488-1.084 2.396-2.888 2.396z"></path>
+                        </svg> VKontakte</li>
+                    <li class="list-inline-item"></li>
+                </ul>
+            </div>
+        </div>
+    </footer>
 </footer>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script></body>
+</body>
 </html>
+
+
+
